<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:weightSum="1"
        android:gravity="center">

        <Button
            android:id="@+id/btn_recovery_default"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:text="@string/restore_default"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_master_service_title"
            android:textColor="#666"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_notify_main_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/please_enter_service_placeholder"
            android:padding="5dp"
            android:textColor="#333"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/notify_service_title"
            android:textColor="#666"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_notify_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/please_enter_service_placeholder"
            android:padding="5dp"
            android:textColor="#333"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/send_master_service_title"
            android:textColor="#666"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_send_main_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/please_enter_service_placeholder"
            android:padding="5dp"
            android:textColor="#333"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/send_service_title"
            android:textColor="#666"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_send_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/please_enter_service_placeholder"
            android:padding="5dp"
            android:textColor="#333"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/service_edit_tips"
            android:textColor="#f20c00"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>