<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/data_bytes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/send_byte_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/send_byte_default"/>

        <TextView
            android:id="@+id/receive_byte_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="10sp"
            android:text="@string/receive_byte_default"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rate_layout"
        android:layout_below="@id/data_bytes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/send_rate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/send_rate_default"/>

            <TextView
                android:id="@+id/receive_rate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="10sp"
                android:text="@string/receive_rate_default"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/max_send_rate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/max_send_rate_default"/>

            <TextView
                android:id="@+id/max_receive_rate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="10sp"
                android:text="@string/max_receive_rate_default"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/average_send_rate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/average_send_rate_default"/>

<!--            <TextView-->
<!--                android:id="@+id/max_receive_rate_tv"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:textSize="10sp"-->
<!--                android:text="@string/max_receive_rate_default"/>-->

        </RelativeLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_below="@id/rate_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/ll_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/log_title" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_flow_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/ll_log"
                android:layout_centerVertical="true"
                android:textSize="10sp"
                android:text="@string/flow_control_disable"/>


        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/top_handle_layout"
        android:layout_below="@id/top_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/read_version_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginEnd="10dp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background"
                android:text="@string/read_soft_version_btn"/>

            <TextView
                android:id="@+id/test_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginEnd="10dp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background"
                android:text="@string/start_test_btn"/>

            <TextView
                android:id="@+id/clear_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background"
                android:text="@string/clear_data_btn"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <EditText
                android:id="@+id/sendData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_background"
                android:hint="@string/please_input_hex_data"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/send"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background"
                android:text="@string/send_data_btn"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_handle_layout"
        android:layout_above="@id/bottom_layout"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/data_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>





</RelativeLayout >
